2013-10-05  Niels Möller  <nisse@lysator.liu.se>

	* Makefile.in (nettle_SOURCES): Added eax.c.
	(HEADERS): Added eax.h.

	* testsuite/Makefile.in (TS_NETTLE_SOURCES): Added eax-test.c.

	* testsuite/eax-test.c: New file.

	* nettle-internal.c (nettle_eax_aes128): New aead algorithm.
	(eax_aes128_set_key, eax_aes128_set_nonce, eax_aes128_update)
	(eax_aes128_encrypt, eax_aes128_decrypt, eax_aes128_digest): New
	functions.

	* eax.c: New file.
	* eax.h: New file.

	* aes.h: Fixed type in name mangling for new aes functions.

2013-09-28  Niels Möller  <nisse@lysator.liu.se>

	* Merge aes-reorg branch. Changes below,
	dated 2013-05-17 - 2013-08-13.

2013-08-13  Niels Möller  <nisse@lysator.liu.se>

	* yarrow.h (struct yarrow256_ctx): Use aes256_ctx, not aes_ctx.
	* yarrow256.c: Adapted to use new aes256 interface.

2013-08-07  Niels Möller  <nisse@lysator.liu.se>

	* umac.h (_UMAC_STATE): Use struct aes128_ctx, not aes_ctx.
	* umac-set-key.c (umac_kdf, _umac_set_key): Use aes128 interface.
	* umac32.c (umac32_digest): Likewise.
	* umac64.c (umac64_digest): Likewise.
	* umac96.c (umac96_digest): Likewise.
	* umac128.c (umac128_digest): Likewise.

2013-06-25  Niels Möller  <nisse@lysator.liu.se>

	* aes-meta.c: Deleted file.

	Analogous changes for new aes192 and aes256 interface.

	* aes.h (struct aes128_ctx): New aes128 declarations.
	* aes-decrypt.c (aes128_decrypt): New function.
	* aes-encrypt.c (aes128_encrypt): New function.
	* aes128-meta.c: New file.
	* aes128-set-encrypt-key.c (aes128_set_encrypt_key): New file and
	function.
	* aes128-set-decrypt-key.c (aes128_set_decrypt_key)
	(aes128_invert_key): New file and functions.
	* Makefile.in (nettle_SOURCES): Added aes128-set-encrypt-key.c,
	aes128-set-decrypt-key.c and aes128-meta.c.

	* nettle-internal.c (nettle_unified_aes128): For testing the old
	AES interface.
	* testsuite/aes-test.c (test_cipher2): New function.
	(test_main): Test both nettle_aes128 and nettle_unified_aes128.
